RISDEV-8402
Relevance-windows
*Add api parameter to allow usage for relevance window
*Added test cases for relevance window